@startuml

title __CLASSES's Class Diagram__\n

  package  {
    class CivilService {
        - daysLeft : int
        + CivilService()
        + getDaysLeft()
        + work()
    }
  }
  

  package  {
    class Main {
        + Main()
        {static} + main()
    }
  }
  

  package  {
    class MilitaryService {
        - daysLeft : int
        + MilitaryService()
        + getDaysLeft()
        + work()
    }
  }
  

  package  {
    interface NationalService {
        {abstract} + getDaysLeft()
        {abstract} + work()
    }
  }
  

  CivilService -up-|> NationalService
  MilitaryService -up-|> NationalService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
